fixup backup directory path, move to using general functions rather than script/functions

--- a/script/install
+++ b/script/install
@@ -24,8 +24,8 @@ cd "$(dirname $0)"/..
 # Set where we want to store the DOTFILES_IGNORE variable
 localSettings=~/.localrc
 
-# Get general install/update functions
-. script/functions
+# Include the general functions
+. ./functions/general
 
 # Source .localrc file for stuff we don't want to install
 . $localSettings
