Install hammerspoon spooninstall

--- a/script/install
+++ b/script/install
@@ -137,8 +137,7 @@ install_run () {
 
 install_run_all () {
   local install_scripts=('./homebrew/install.sh')
-  install_scripts+=($(find . -name install.sh -not -path "./vendor/*" -not -path "./homebrew/*" -not -path "./homebrew-cask/*"  ) )
-  install_scripts+=('./homebrew-cask/install.sh')
+  install_scripts+=($(find . -name install.sh -not -path "./vendor/*" -not -path "./homebrew/*" ) )
   local install_all=false always_skip_all=false skip_all=false
 
   for install_script in "${install_scripts[@]}"; do
